sampler/chain/projects/spring-boot/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/convert/StringToDurationConverter.java:54: error: [NullAway] (INDEX= 380) (Covered) returning @Nullable expression from method with @NonNull return type
		return (annotation != null) ? annotation.value() : null;
		^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/web/client/RestTemplateBuilder.java:711: error: [NullAway] (INDEX= 572) (Covered) passing @Nullable parameter 'null' where @NonNull is required
			this(null, null, null);
			     ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/web/embedded/tomcat/TomcatWebServer.java:103: error: [NullAway] (INDEX= 520) (Covered) assigning @Nullable expression to @NonNull field
		this.gracefulShutdown = (shutdown == Shutdown.GRACEFUL) ? new GracefulShutdown(tomcat) : null;
		                      ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/context/properties/bind/BindConverter.java:236: error: [NullAway] (INDEX= 191) (Covered) returning @Nullable expression from method with @NonNull return type
				return null;
				^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/ansi/AnsiOutput.java:38: error: [NullAway] (INDEX= 343) (Covered) @NonNull static field ansiCapable not initialized
	private static Boolean ansiCapable;
	                       ^

	(see http://t.uber.com/nullaway )
